--- a/A4/makefile
+++ b/A4/makefile
@@ -1,9 +1,9 @@
 all: client server
 
-client: client-process.c
+client: client-process.c comm-server.h client.h
 	gcc client-process.c -o client
 
-server: name-server.c
+server: name-server.c name-server.h
 	gcc name-server.c -o server
 
 clean:
