--- a/A4/makefile
+++ b/A4/makefile
@@ -1,7 +1,7 @@
 all: client server
 
 client: client-process.c comm-server.h client.h
-	gcc -pthread client-process.c -o client
+	gcc client-process.c -o client
 
 server: name-server.c name-server.h
 	gcc name-server.c -o server
